--- a/unitmanagement/templates/unitmanagement/k9_sick_details.html
+++ b/unitmanagement/templates/unitmanagement/k9_sick_details.html
@@ -20,7 +20,7 @@
             </tr>
             <tr>
                 <th>Problem</th>
-                <td>{{data.description}}</td>
+                <td class="nine wide">{{data.description}}</td>
                 <td>Reported by:</td>
                 <td>{{data.reported_by}}</td>
             </tr>
