--- a/deployment/templates/deployment/request_dog_list.html
+++ b/deployment/templates/deployment/request_dog_list.html
@@ -12,7 +12,6 @@
                 <th>Requester</th>
                 <th>Place</th>
                 <th>Total Dogs Requested</th>
-                <th>Remarks</th>
                 <th>Status</th>
                 <th></th>
             </tr>
@@ -20,13 +19,12 @@
         <tbody>
             {% for Data in data %}
                 {% if Data.status == "Pending" %}
-                    <tr class = "warning">
+                    <tr>
                         <td>{{Data.start_date}}</td>
                         <td>{{Data.end_date}}</td>
                         <td>{{Data.requester}}</td>
                         <td>{{Data.location}}</td>
                         <td>{{Data.total_dogs_demand}}</td>
-                        <td>{{Data.remarks}}</td>
                         <td><center><i class="attention icon"></i>{{Data.status}}</center></td>
                         <td style="text-align:center;">
                             <a href="{% url 'deployment:request_dog_details' Data.id %}" class = "tiny ui blue basic button">Select</a>
@@ -40,7 +38,7 @@
                         <td>{{Data.location}}</td>
                         <td>{{Data.total_dogs_demand}}</td>
                         <td>{{Data.remarks}}</td>
-                        <td><center><i class="attention icon"></i>{{Data.status}}</center></td>
+                        <td><center><i class="checkmark icon"></i>{{Data.status}}</center></td>
                         <td style="text-align:center;">
                             <a href="{% url 'deployment:request_dog_details' Data.id %}" class = "tiny ui blue basic button">Select</a>
                         </td>
@@ -59,12 +57,13 @@
                         </td>
                     </tr>
                 {%else%}
-                <tr class = "negative">
+                <tr>
                         <td>{{Data.start_date}}</td>
+                        <td>{{Data.end_date}}</td>
                         <td>{{Data.requester}}</td>
                         <td>{{Data.location}}</td>
                         <td>{{Data.total_dogs_demand}}</td>
-                        <td><center><i class="attention icon"></i>{{Data.status}}</center></td>
+                        <td><center><i class="checkmark icon"></i>{{Data.status}}</center></td>
                         <td style="text-align:center;">
                             <a href="{% url 'deployment:request_dog_details' Data.id %}" class = "tiny ui blue basic button">Select</a>
                         </td>
