--- a/unitmanagement/templates/unitmanagement/index.html
+++ b/unitmanagement/templates/unitmanagement/index.html
@@ -2,4 +2,40 @@
 
 {% block content %}
 
+<div class="ui floating icon dropdown button">
+    <i class="filter icon"></i>
+    <div class="menu">
+            <div class="item">this is a message that needs to be read by the user. plse dropdown.
+                    loren ipsum what the hell am i writing.</div><br>
+            <div class="item">this is a message that needs to be read by the user. plse dropdown.
+                    loren ipsum what the hell am i writing.</div>   
+    </div>
+</div>
+
+<script>
+    $('.ui.dropdown').dropdown();
+</script>
+
+<div >
+    <div style="background-color: transparent;margin-top: 1px;" class="ui icon top left pointing dropdown button" >
+        <i class="blue bell icon"></i>
+        <span style="color:red;font-size: 12px;">{{count}}</span>
+        <div class="menu" style='overflow: auto;max-height: 350px;'>
+            {% for notif_data in notif_data%}
+                {%if notif_data.viewed == True %}
+                <a class="item" style='color: black;opacity: 0.6;' href="{% url 'unitmanagement:redirect_notif' notif_data.id %}">{{notif_data.message}} 
+                    <br>
+                    <small>{{notif_data.datetime}}</small>
+                </a>
+                {%else%}
+                <a class="item" style='color: black;' href="{% url 'unitmanagement:redirect_notif' notif_data.id %}">{{notif_data.message}} 
+                        <br>
+                        <small>{{notif_data.datetime}}</small>
+                    </a>
+                {%endif%}
+            {% endfor%}
+        </div>
+    </div>
+</div>
+
 {% endblock%}
