--- a/profiles/templates/profiles/add_User.html
+++ b/profiles/templates/profiles/add_User.html
@@ -38,6 +38,9 @@
     <div class="ui inverted segment">
     <form class="ui inverted equal width form" action="{% url 'profiles:add_User_form' %}" method="POST">
         {% csrf_token %}
+        <div class="field">
+            {{form.image}}
+        </div>
         <div class="fields">
             <div class="field">
                 <label>Position</label>
