--- a/profiles/templates/profiles/user_detail.html
+++ b/profiles/templates/profiles/user_detail.html
@@ -12,7 +12,13 @@
   </p>
 </div>
 {% endif %}
+<div class="ui basic segment">
+        
+  <center>
+      <img src="{{user.image.url}}" alt="" width="240">
+  </center>
 
+</div>
 <div class="ui top attached tabular menu">
     <a class="item active" data-tab="first">User Information</a>
     <a class="item" data-tab="second">Personal Information</a>
