--- a/planningandacquiring/templates/planningandacquiring/add_donated_K9.html
+++ b/planningandacquiring/templates/planningandacquiring/add_donated_K9.html
@@ -27,8 +27,12 @@
             <div class="{{ style }} row"> {{ message }}</div>
         {% endfor %}
     {% endif %}
-<form class = "ui inverted form" action="{% url 'planningandacquiring:add_donated_K9_form' %}" method="post">
+<form class = "ui inverted form" action="{% url 'planningandacquiring:add_donated_K9_form' %}" enctype="multipart/form-data" method="POST">
     {% csrf_token %}
+    <div class="field">
+        <label>K9 Image</label>
+        {{form.image}}
+    </div>
     <div class="fields">
         <div class="sixteen wide field">
             <label>Name</label>
