--- a/planningandacquiring/templates/planningandacquiring/confirm_K9_donation.html
+++ b/planningandacquiring/templates/planningandacquiring/confirm_K9_donation.html
@@ -21,6 +21,13 @@
   </div>
 </div>
         <h2 class="ui dividing header">K9 Information</h2>
+      <div class="ui basic segment">
+      
+        <center>
+            <img src="{{k9.image.url}}" alt="" width="280">
+        </center>
+      
+      </div>
 		<table class="ui celled table">
         	<thead>
           	<tr>
