--- a/planningandacquiring/templates/planningandacquiring/confirm_K9_parents.html
+++ b/planningandacquiring/templates/planningandacquiring/confirm_K9_parents.html
@@ -44,7 +44,7 @@
         <div class="field">
 
          <h2 class="ui dividing header">Mother</h2>
-		<table class="ui celled table">
+		<table class="ui two column celled table">
         	<thead>
           	<tr>
                 <th>Name</th>
