--- a/planningandacquiring/templates/planningandacquiring/confirm_breeding.html
+++ b/planningandacquiring/templates/planningandacquiring/confirm_breeding.html
@@ -31,6 +31,20 @@
   </div>
 </div>
 
+<div class="ui horizontal very basic segments">
+  <div class="ui segment">
+    <center>
+      <img src="{{mother.image.url}}" alt="" width="280">
+    </center>
+  </div>
+  <div class="ui segment">
+    <center>
+      <img src="{{father.image.url}}" alt="" width="280">
+    </center>
+  </div>
+ 
+</div>
+
 <div class="ui placeholder segment">
   <div class="ui two column stackable center aligned grid">
     <div class="ui vertical divider">Parents</div>
@@ -179,7 +193,12 @@
     </div>
   </div>
 <h2 class="ui center aligned dividing header">Offspring</h2>
-		<table class="ui celled table">
+  <div class="ui segment">
+    <center>
+      <img src="{{offspring.image.url}}" alt="" width="280">
+    </center>
+  </div>
+  <table class="ui celled table">
         	<thead>
           	<tr>
                 <th>Name</th>
