--- a/unitmanagement/templates/unitmanagement/index.html
+++ b/unitmanagement/templates/unitmanagement/index.html
@@ -38,4 +38,20 @@
     </div>
 </div>
 
+<div class="ui basic segment">
+        
+    <center>
+        <img src="{{user.image.url}}" alt="" width="240">
+    </center>
+
+</div>
+
+<!-- <form action="" class="ui form" enctype="multipart/form-data" method="POST">
+    {% csrf_token %}
+    <div class="field">
+        {{form.image}}
+    </div>
+    <button class="ui green button" type="submit">Submit</button>
+</form> -->
+
 {% endblock%}
