--- a/profiles/templates/profiles/global-base-ui/global_base_ui.html
+++ b/profiles/templates/profiles/global-base-ui/global_base_ui.html
@@ -36,7 +36,7 @@
             </a>
         </div>
         <div class="right menu">
-            <div class="ui item">
+            <div class="ui item" style='border-style: none;'>
                 {% include 'profiles/global-base-ui/notification.html' %}
             </div>
             <div class="topdiv">
