--- a/profiles/templates/profiles/global-base-ui/notification.html
+++ b/profiles/templates/profiles/global-base-ui/notification.html
@@ -1,9 +1,9 @@
 {% load static %}
-<div>
+<a href="{% url 'profiles:notif_list'%}">
     <div style="background-color: transparent;margin-top: 1px;" class="ui icon top left pointing dropdown button" >
         <i class="blue bell icon"></i>
         <span style="color:red;font-size: 12px;">{{count}}</span>
-        <div class="menu" style='overflow: auto;max-height: 350px;'>
+        <div class="ui vertical scrollable menu" style="width:350px;height:300px; overflow-x: auto;">
             {% for notif_data in notif_data%}
                 {%if notif_data.viewed == True %}
                 <a class="item" style='color: black;opacity: 0.6;' href="{% url 'unitmanagement:redirect_notif' notif_data.id %}">{{notif_data.message}} 
@@ -19,7 +19,7 @@
             {% endfor%}
         </div>
     </div>
-</div>
+</a>
 
 <style>
     .dim{
