reports and edited training

--- a/profiles/templates/profiles/sidebar_deployment.html
+++ b/profiles/templates/profiles/sidebar_deployment.html
@@ -33,6 +33,9 @@
                                     <a href="{% url 'deployment:view_incidents'%}" class="item">Incident List View
                                         <i class="clipboard list icon"></i>
                                     </a>
+                                    <a href="{% url 'deployment:choose_date'%}" class="item">Deployment Report
+                                        <i class="clipboard list icon"></i>
+                                    </a>
                                 </div>
                         </div>
                         <!>
