--- a/profiles/templates/profiles/sidebar_inventory.html
+++ b/profiles/templates/profiles/sidebar_inventory.html
@@ -43,6 +43,9 @@
                                     <a href="{% url 'unitmanagement:request_list'%}" class="item">Damaged Equipment List
                                         <i class="clipboard list icon"></i>
                                     </a>
+                                    <a href="{% url 'inventory:choose_date'%}" class="item">Inventory Report
+                                                <i class="clipboard list icon"></i>
+                                        </a>
                                         {% endif %}
 
                                     {% if request.session.session_user_position == "Handler" %}
