--- a/unitmanagement/templates/unitmanagement/request_list.html
+++ b/unitmanagement/templates/unitmanagement/request_list.html
@@ -1,4 +1,4 @@
-{% extends "profiles/sidebar_um.html" %}
+{% extends "profiles/sidebar_inventory.html" %}
 
 {% block content %}
 <div class="ui inverted segment" style="padding:20px;">
