--- a/training/templates/training/training_details.html
+++ b/training/templates/training/training_details.html
@@ -110,8 +110,15 @@
     <table class="ui three column celled table">
         <thead>
             <tr>
-                <th>Stage 1.1</th>
-                <th>Description of Stage</th>
+                <th>Stage 1.1: Basic Handling</th>
+                <th><b>Topic:</b>
+                    <br>- Orientation / K9 History
+                    <br>- Bonding
+                    <br>- K9 Language
+                    <br>- Familiarization
+                    <br>- Socialization
+                    <br>- Acclimatization
+                </th>
                 {% if edd.stage1_1 == True %}
                 <td>Passed</td>
                 {%elif edd.grade == '0'%}
@@ -121,8 +128,14 @@
                 {% endif %}
             </tr>
             <tr>
-                <th>Stage 1.2</th>
-                <th>Description of Stage</th>
+                <th>Stage 1.2: Drive Development</th>
+                <th><b>Topic:</b>
+                    <br>- Timing
+                    <br>- Voice Tones and Effects
+                    <br>- Praise and Reward
+                    <br>- Introduction to Training Equipments/Aides
+                    <br>- K9 Training Areas
+                </th>
                 {% if edd.stage1_2 == True %}
                 <td>Passed</td>
                 {%elif edd.grade == '0'%}
@@ -132,8 +145,16 @@
                 {% endif %}
             </tr>
             <tr>
-                <th>Stage 1.3</th>
-                <th>Description of Stage</th>
+                <th>Stage 1.3: Introduction to Search</th>
+                <th><b>Topic:</b>
+                    <br>- Hide and Seek
+                    <br>- Basic Search Works
+                    <br>- Search Pattern and Pattern of Behavior
+                    <br>- Reinforcement
+                    <br>- Handling of Training Equipments/Aides
+                    <br>- Alert Signs
+                    <br>- Handling Skills Development
+                </th>
                 {% if edd.stage1_3 == True %}
                 <td>Passed</td>
                 {%elif edd.grade == '0'%}
@@ -143,8 +164,13 @@
                 {% endif %}
             </tr>
             <tr>
-                <th>Stage 2.1</th>
-                <th>Description of Stage</th>
+               <th>Stage 2.1: Indication / Printing Introduction</th>
+                <th><b>Topic:</b>
+                    <br>- Indiciation/Intensity Sit
+                    <br>- Substance/Printing Process
+                    <br>- Proper Use of Training Substances/Aides
+                    <br>- Contamination and decontamination
+                </th>
                 {% if edd.stage2_1 == True %}
                 <td>Passed</td>
                 {%elif edd.grade == '0'%}
@@ -154,8 +180,13 @@
                 {% endif %}
             </tr>
             <tr>
-                <th>Stage 2.2</th>
-                <th>Description of Stage</th>
+               <th>Stage 2.2: Scent Discrimination / Distraction</th>
+                <th><b>Topic:</b>
+                    <br>- Introduction to New Odor and Mixed Odors
+                    <br>- Wind Direction
+                    <br>- Mind Focus
+                    <br>- Stress Level
+                </th>
                 {% if edd.stage2_2 == True %}
                 <td>Passed</td>
                 {%elif edd.grade == '0'%}
@@ -165,8 +196,16 @@
                 {% endif %}
             </tr>
             <tr>
-                <th>Stage 2.3</th>
-                <th>Description of Stage</th>
+                <th>Stage 2.3: Volume Odor Discrimination / Safety Measure</th>
+                <th><b>Topic:</b>
+                    <br>- Minor Odor Discrimination
+                    <br>- Residue Control
+                    <br>- Passive Indication
+                    <br>- Mind Control on Safety Measure
+                    <br>- Leash Handling/Control
+                    <br>- Finds (Low, Medium, High)
+                    <br>- Difficulty of Finds (Easy, Medium, Hard)
+                </th>
                 {% if edd.stage1_3 == True %}
                 <td>Passed</td>
                 {%elif edd.grade == '0'%}
@@ -176,8 +215,13 @@
                 {% endif %}
             </tr>
             <tr>
-                <th>Stage 3.1</th>
-                <th>Description of Stage</th>
+                <th>Stage 3.1: Field Search Introduction</th>
+                <th><b>Topic:</b>
+                    <br>- Field Searches
+                    <br>- Area Assessment
+                    <br>- Target Assessment
+                    <br>- Indoor/Outdoor Searches
+                </th>
                 {% if edd.stage3_1 == True %}
                 <td>Passed</td>
                 {%elif edd.grade == '0'%}
@@ -187,8 +231,8 @@
                 {% endif %}
             </tr>
             <tr>
-                <th>Stage 3.2</th>
-                <th>Description of Stage</th>
+                <th>Stage 3.2: Field Proofing</th>
+                <td></td>
                 {% if edd.stage3_2 == True %}
                 <td>Passed</td>
                 {%elif edd.grade == '0'%}
@@ -198,8 +242,8 @@
                 {% endif %}
             </tr>
             <tr>
-                <th>Stage 3.3</th>
-                <th>Description of Stage</th>
+                <th>Stage 3.3: On-The-Job Training/Field</th>
+                <td></td>
                 {% if edd.stage3_3 == True %}
                 <td>Passed</td>
                 {%elif edd.grade == '0'%}
@@ -238,8 +282,15 @@
   <table class="ui three column celled table">
       <thead>
           <tr>
-              <th>Stage 1.1</th>
-              <th>Description of Stage</th>
+              <th>Stage 1.1: Basic Handling</th>
+                <th><b>Topic:</b>
+                    <br>- Orientation / K9 History
+                    <br>- Bonding
+                    <br>- K9 Language
+                    <br>- Familiarization
+                    <br>- Socialization
+                    <br>- Acclimatization
+                </th>
               {% if ndd.stage1_1 == True %}
               <td>Passed</td>
               {%elif ndd.grade == '0'%}
@@ -249,8 +300,14 @@
               {% endif %}
           </tr>
           <tr>
-              <th>Stage 1.2</th>
-              <th>Description of Stage</th>
+              <th>Stage 1.2: Drive Development</th>
+                <th><b>Topic:</b>
+                    <br>- Timing
+                    <br>- Voice Tones and Effects
+                    <br>- Praise and Reward
+                    <br>- Introduction to Training Equipments/Aides
+                    <br>- K9 Training Areas
+                </th>
               {% if ndd.stage1_2 == True %}
               <td>Passed</td>
               {%elif ndd.grade == '0'%}
@@ -260,8 +317,16 @@
               {% endif %}
           </tr>
           <tr>
-              <th>Stage 1.3</th>
-              <th>Description of Stage</th>
+              <th>Stage 1.3: Introduction to Search</th>
+                <th><b>Topic:</b>
+                    <br>- Hide and Seek
+                    <br>- Basic Search Works
+                    <br>- Search Pattern and Pattern of Behavior
+                    <br>- Reinforcement
+                    <br>- Handling of Training Equipments/Aides
+                    <br>- Alert Signs
+                    <br>- Handling Skills Development
+                </th>
               {% if ndd.stage1_3 == True %}
               <td>Passed</td>
               {%elif ndd.grade == '0'%}
@@ -271,8 +336,13 @@
               {% endif %}
           </tr>
           <tr>
-              <th>Stage 2.1</th>
-              <th>Description of Stage</th>
+              <th>Stage 2.1: Indication / Printing Introduction</th>
+                <th><b>Topic:</b>
+                    <br>- Indiciation/Intensity Sit
+                    <br>- Substance/Printing Process
+                    <br>- Proper Use of Training Substances/Aides
+                    <br>- Contamination and decontamination
+                </th>
               {% if ndd.stage2_1 == True %}
               <td>Passed</td>
               {%elif ndd.grade == '0'%}
@@ -282,8 +352,13 @@
               {% endif %}
           </tr>
           <tr>
-              <th>Stage 2.2</th>
-              <th>Description of Stage</th>
+              <th>Stage 2.2: Scent Discrimination / Distraction</th>
+                <th><b>Topic:</b>
+                    <br>- Introduction to New Odor and Mixed Odors
+                    <br>- Wind Direction
+                    <br>- Mind Focus
+                    <br>- Stress Level
+                </th>
               {% if ndd.stage2_2 == True %}
               <td>Passed</td>
               {%elif ndd.grade == '0'%}
@@ -293,8 +368,16 @@
               {% endif %}
           </tr>
           <tr>
-              <th>Stage 2.3</th>
-              <th>Description of Stage</th>
+              <th>Stage 2.3: Volume Odor Discrimination / Safety Measure</th>
+                <th><b>Topic:</b>
+                    <br>- Minor Odor Discrimination
+                    <br>- Residue Control
+                    <br>- Passive Indication
+                    <br>- Mind Control on Safety Measure
+                    <br>- Leash Handling/Control
+                    <br>- Finds (Low, Medium, High)
+                    <br>- Difficulty of Finds (Easy, Medium, Hard)
+                </th>
               {% if ndd.stage1_3 == True %}
               <td>Passed</td>
               {%elif ndd.grade == '0'%}
@@ -304,8 +387,13 @@
               {% endif %}
           </tr>
           <tr>
-              <th>Stage 3.1</th>
-              <th>Description of Stage</th>
+              <th>Stage 3.1: Field Search Introduction</th>
+                <th><b>Topic:</b>
+                    <br>- Field Searches
+                    <br>- Area Assessment
+                    <br>- Target Assessment
+                    <br>- Indoor/Outdoor Searches
+                </th>
               {% if ndd.stage3_1 == True %}
               <td>Passed</td>
               {%elif ndd.grade == '0'%}
@@ -315,8 +403,8 @@
               {% endif %}
           </tr>
           <tr>
-              <th>Stage 3.2</th>
-              <th>Description of Stage</th>
+              <th>Stage 3.2: Field Proofing</th>
+                <td></td>
               {% if ndd.stage3_2 == True %}
               <td>Passed</td>
               {%elif ndd.grade == '0'%}
@@ -326,8 +414,8 @@
               {% endif %}
           </tr>
           <tr>
-              <th>Stage 3.3</th>
-              <th>Description of Stage</th>
+               <th>Stage 3.3: On-The-Job Training/Field</th>
+                <td></td>
               {% if ndd.stage3_3 == True %}
               <td>Passed</td>
               {%elif ndd.grade == '0'%}
@@ -366,8 +454,15 @@
   <table class="ui three column celled table">
       <thead>
           <tr>
-              <th>Stage 1.1</th>
-              <th>Description of Stage</th>
+              <th>Stage 1.1: Basic Handling</th>
+                <th><b>Topic:</b>
+                    <br>- Orientation / K9 History
+                    <br>- Bonding
+                    <br>- K9 Language
+                    <br>- Familiarization
+                    <br>- Socialization
+                    <br>- Acclimatization
+                </th>
               {% if sar.stage1_1 == True %}
               <td>Passed</td>
               {%elif sar.grade == '0'%}
@@ -377,8 +472,14 @@
               {% endif %}
           </tr>
           <tr>
-              <th>Stage 1.2</th>
-              <th>Description of Stage</th>
+              <th>Stage 1.2: Drive Development</th>
+                <th><b>Topic:</b>
+                    <br>- Timing
+                    <br>- Voice Tones and Effects
+                    <br>- Praise and Reward
+                    <br>- Introduction to Training Equipments/Aides
+                    <br>- K9 Training Areas
+                </th>
               {% if sar.stage1_2 == True %}
               <td>Passed</td>
               {%elif sar.grade == '0'%}
@@ -388,8 +489,16 @@
               {% endif %}
           </tr>
           <tr>
-              <th>Stage 1.3</th>
-              <th>Description of Stage</th>
+              <th>Stage 1.3: Introduction to Search</th>
+                <th><b>Topic:</b>
+                    <br>- Hide and Seek
+                    <br>- Basic Search Works
+                    <br>- Search Pattern and Pattern of Behavior
+                    <br>- Reinforcement
+                    <br>- Handling of Training Equipments/Aides
+                    <br>- Alert Signs
+                    <br>- Handling Skills Development
+                </th>
               {% if sar.stage1_3 == True %}
               <td>Passed</td>
               {%elif sar.grade == '0'%}
@@ -399,8 +508,13 @@
               {% endif %}
           </tr>
           <tr>
-              <th>Stage 2.1</th>
-              <th>Description of Stage</th>
+              <th>Stage 2.1: Indication / Printing Introduction</th>
+                <th><b>Topic:</b>
+                    <br>- Indiciation/Intensity Sit
+                    <br>- Substance/Printing Process
+                    <br>- Proper Use of Training Substances/Aides
+                    <br>- Contamination and decontamination
+                </th>
               {% if sar.stage2_1 == True %}
               <td>Passed</td>
               {%elif sar.grade == '0'%}
@@ -410,8 +524,13 @@
               {% endif %}
           </tr>
           <tr>
-              <th>Stage 2.2</th>
-              <th>Description of Stage</th>
+              <th>Stage 2.2: Scent Discrimination / Distraction</th>
+                <th><b>Topic:</b>
+                    <br>- Introduction to New Odor and Mixed Odors
+                    <br>- Wind Direction
+                    <br>- Mind Focus
+                    <br>- Stress Level
+                </th>
               {% if sar.stage2_2 == True %}
               <td>Passed</td>
               {%elif sar.grade == '0'%}
@@ -421,8 +540,16 @@
               {% endif %}
           </tr>
           <tr>
-              <th>Stage 2.3</th>
-              <th>Description of Stage</th>
+              <th>Stage 2.3: Volume Odor Discrimination / Safety Measure</th>
+                <th><b>Topic:</b>
+                    <br>- Minor Odor Discrimination
+                    <br>- Residue Control
+                    <br>- Passive Indication
+                    <br>- Mind Control on Safety Measure
+                    <br>- Leash Handling/Control
+                    <br>- Finds (Low, Medium, High)
+                    <br>- Difficulty of Finds (Easy, Medium, Hard)
+                </th>
               {% if sar.stage1_3 == True %}
               <td>Passed</td>
               {%elif sar.grade == '0'%}
@@ -432,8 +559,13 @@
               {% endif %}
           </tr>
           <tr>
-              <th>Stage 3.1</th>
-              <th>Description of Stage</th>
+              <th>Stage 3.1: Field Search Introduction</th>
+                <th><b>Topic:</b>
+                    <br>- Field Searches
+                    <br>- Area Assessment
+                    <br>- Target Assessment
+                    <br>- Indoor/Outdoor Searches
+                </th>
               {% if sar.stage3_1 == True %}
               <td>Passed</td>
               {%elif sar.grade == '0'%}
@@ -443,8 +575,8 @@
               {% endif %}
           </tr>
           <tr>
-              <th>Stage 3.2</th>
-              <th>Description of Stage</th>
+              <th>Stage 3.2: Field Proofing</th>
+                <td></td>
               {% if sar.stage3_2 == True %}
               <td>Passed</td>
               {%elif sar.grade == '0'%}
@@ -454,8 +586,8 @@
               {% endif %}
           </tr>
           <tr>
-              <th>Stage 3.3</th>
-              <th>Description of Stage</th>
+              <th>Stage 3.3: On-The-Job Training/Field</th>
+                <td></td>
               {% if sar.stage3_3 == True %}
               <td>Passed</td>
               {%elif sar.grade == '0'%}
