--- a/training/templates/training/training_update_edd.html
+++ b/training/templates/training/training_update_edd.html
@@ -10,12 +10,6 @@
     {% endif %}
 </div>
 
-<div class="ui top attached tabular menu">
-    <a class="item active" data-tab="first">Training Status</a>
-    <a class="item" data-tab="second">Daily Record</a>
-</div>
-
-<div class="ui tab segment active" data-tab="first">
 <table class="ui very basic four column table">
     <thead>
         <tr>
@@ -33,50 +27,94 @@
         <thead>
             <!--Stage 1-->
             <tr>
-                <th>Stage 1.1</th>
-                <td>This is Stage 1.1 Training of EDD</td>
+                <th>Stage 1.1: Basic Handling</th>
+                <td><b>Topic:</b>
+                    <br>- Orientation / K9 History
+                    <br>- Bonding
+                    <br>- K9 Language
+                    <br>- Familiarization
+                    <br>- Socialization
+                    <br>- Acclimatization
+                </td>
                 <td class="ui center aligned">{{form.stage1_1}}</td>
             </tr>
             <tr>
-                <th>Stage 1.2</th>
-                <td>This is Stage 1.2 Training of EDD</td>
+                <th>Stage 1.2: Drive Development</th>
+                <td><b>Topic:</b>
+                    <br>- Timing
+                    <br>- Voice Tones and Effects
+                    <br>- Praise and Reward
+                    <br>- Introduction to Training Equipments/Aides
+                    <br>- K9 Training Areas
+                </td>
                 <td class="ui center aligned">{{form.stage1_2}}</td>
             </tr>
             <tr>
-                <th>Stage 1.3</th>
-                <td>This is Stage 1.3 Training of EDD</td>
+                <th>Stage 1.3: Introduction to Search</th>
+                <td><b>Topic:</b>
+                    <br>- Hide and Seek
+                    <br>- Basic Search Works
+                    <br>- Search Pattern and Pattern of Behavior
+                    <br>- Reinforcement
+                    <br>- Handling of Training Equipments/Aides
+                    <br>- Alert Signs
+                    <br>- Handling Skills Development
+                </td>
                 <td class="ui center aligned">{{form.stage1_3}}</td>
             </tr>
             <!--Stage 2-->
             <tr>
-                <th>Stage 2.1</th>
-                <td>This is Stage 2.1 Training of EDD</td>
+                <th>Stage 2.1: Indication / Printing Introduction</th>
+                <td><b>Topic:</b>
+                    <br>- Indiciation/Intensity Sit
+                    <br>- Substance/Printing Process
+                    <br>- Proper Use of Training Substances/Aides
+                    <br>- Contamination and decontamination
+                </td>
                 <td class="ui center aligned">{{form.stage2_1}}</td>
             </tr>
             <tr>
-                <th>Stage 2.2</th>
-                <td>This is Stage 2.2 Training of EDD</td>
+                <th>Stage 2.2: Scent Discrimination / Distraction</th>
+                <td><b>Topic:</b>
+                    <br>- Introduction to New Odor and Mixed Odors
+                    <br>- Wind Direction
+                    <br>- Mind Focus
+                    <br>- Stress Level
+                </td>
                 <td class="ui center aligned">{{form.stage2_2}}</td>
             </tr>
             <tr>
-                <th>Stage 2.3</th>
-                <td>This is Stage 2.3 Training of EDD</td>
+                <th>Stage 2.3: Volume Odor Discrimination / Safety Measure</th>
+                <td><b>Topic:</b>
+                    <br>- Minor Odor Discrimination
+                    <br>- Residue Control
+                    <br>- Passive Indication
+                    <br>- Mind Control on Safety Measure
+                    <br>- Leash Handling/Control
+                    <br>- Finds (Low, Medium, High)
+                    <br>- Difficulty of Finds (Easy, Medium, Hard)
+                </td>
                 <td class="ui center aligned">{{form.stage2_3}}</td>
             </tr>
              <!--Stage 3-->
             <tr>
-                <th>Stage 3.1</th>
-                <td>This is Stage 3.1 Training of EDD</td>
+                <th>Stage 3.1: Field Search Introduction</th>
+                <td><b>Topic:</b>
+                    <br>- Field Searches
+                    <br>- Area Assessment
+                    <br>- Target Assessment
+                    <br>- Indoor/Outdoor Searches
+                </td>
                 <td class="ui center aligned">{{form.stage3_1}}</td>
             </tr>
             <tr>
-                <th>Stage 3.2</th>
-                <td>This is Stage 3.2 Training of EDD</td>
+                <th>Stage 3.2: Field Proofing</th>
+                <td></td>
                 <td class="ui center aligned">{{form.stage3_2}}</td>
             </tr>
             <tr>
-                <th>Stage 3.3</th>
-                <td>This is Stage 3.3 Training of EDD</td>
+                <th>Stage 3.3: On-The-Job Training/Field</th>
+                <td></td>
                 <td class="ui center aligned">{{form.stage3_3}}</td>
             </tr>
         </thead>
@@ -105,167 +143,7 @@
         <button onclick="return confirm('Are you sure?')" id = "btn" class = "ui button green" type="submit" >Submit</button>
     </div>
 </form>
-</div>
 
-<div class="ui tab segment active" data-tab="second">
-<table class="ui very basic four column table">
-    <thead>
-        <tr>
-            <th>Status: {{data.training_status}}</th>
-            <th>Type: {{data.status}}</th>
-            <th>Capability: {{data.capability}}</th>
-            <th>Level: {{data.training_level}}</th>
-        </tr>
-    </thead>
-</table>
-
- <form class="ui form" action="" method="POST">
-    {% csrf_token %}
-
-<div class="ui fluid container">
-    <div class="ui segment">
-        <div class="fields">
-            <div class="field">
-                <label><b>Training/Utilization (with Dog)</b></label>
-            </div>
-        </div>
-        <div class="fields">
-            <div class="field">
-                On Leash Obedience: {{form2.on_leash}}
-            </div>
-            <div class="field">
-                Off Leash Obedience: {{form2.off_leash}}
-            </div>
-            <div class="field">
-                Obstacle Course: {{form2.obstacle_course}}
-            </div>
-            <div class="field">
-                Panelling: {{form2.panelling}}
-            </div>
-        </div>
-        <div class="fields">
-            <div class="field">
-                <b>Port Facility</b>
-            </div>
-        </div>
-        <div class="fields">
-            <div class="field">
-                Plant/Find: {{form2.port_plant}} {{form2.port_find}}
-            </div>
-            <div class="field">
-                Search Time (seconds): {{form2.port_time}}
-            </div>
-        </div>
-        <div class="fields">
-            <div class="field">
-                <b>Port Facility</b>
-            </div>
-        </div>
-        <div class="fields">
-            <div class="field">
-                Plant/Find: {{form2.port_plant}} {{form2.port_find}}
-            </div>
-            <div class="field">
-                Search Time (seconds): {{form2.port_time}}
-            </div>
-        </div>
-        <div class="fields">
-            <div class="field">
-                <b>Building</b>
-            </div>
-        </div>
-        <div class="fields">
-            <div class="field">
-                Plant/Find: {{form2.building_plant}} {{form2.building_find}}
-            </div>
-            <div class="field">
-                Search Time (seconds): {{form2.building_time}}
-            </div>
-        </div>
-        <div class="fields">
-            <div class="field">
-                <b>Vehicle (ex. Bus, Jeep, etc.)</b>
-            </div>
-        </div>
-        <div class="fields">
-            <div class="field">
-                Plant/Find: {{form2.vehicle_plant}} {{form2.vehicle_find}}
-            </div>
-            <div class="field">
-                Search Time (seconds): {{form2.vehicle_time}}
-            </div>
-        </div>
-        <div class="fields">
-            <div class="field">
-                <b>Baggage</b>
-            </div>
-        </div>
-        <div class="fields">
-            <div class="field">
-                Plant/Find: {{form2.baggage_plant}} {{form2.baggage_find}}
-            </div>
-            <div class="field">
-                Search Time (seconds): {{form2.baggage_time}}
-            </div>
-        </div>
-        <div class="fields">
-            <div class="field">
-                <b>Others</b>
-            </div>
-        </div>
-        <div class="fields">
-            <div class="field">
-                Plant/Find: {{form2.others_plant}} {{form2.others_find}}
-            </div>
-            <div class="field">
-                Search Time (seconds): {{form2.others_time}}
-            </div>
-        </div>
-        <div class="fields">
-            <div class="field">
-                Daily Training Record (Satisfactory/Unsatisfactory): {{form2.daily_rating}}
-            </div>
-        </div>
-        <div class="fields">
-            <div class="field">
-                <label><b>Utilization (without Dog)</b></label>
-            </div>
-        </div>
-        <div class="fields">
-            <div class="field">
-                MARSEC: {{form2.MARSEC}}
-            </div>
-            <div class="field">
-                MARLEN: {{form2.MARLEN}}
-            </div>
-            <div class="field">
-                MARSAR: {{form2.MARSAR}}
-            </div>
-            <div class="field">
-                MAREP: {{form2.MAREP}}
-            </div>
-        </div>
-        <div class="fields">
-            <div class="field">
-                <b>Daily Feeding</b>
-            </div>
-        </div>
-        <div class="fields">
-            <div class="field">
-                Morning Feed (Per cup): {{form2.morning_feed}}
-            </div>
-            <div class="field">
-                Evening Feed (Per cup): {{form2.evening_feed}}
-            </div>
-        </div>
-    </div>
-    </div>
-
-        <div class="ui basic center aligned segment">
-            <button onclick="return confirm('Are you sure?')" id = "btn" class = "ui button green" type="submit" >Submit</button>
-        </div>
-    </form>
-</div>
 
 
 <script type="text/javascript">
