--- a/unitmanagement/templates/unitmanagement/change_equipment.html
+++ b/unitmanagement/templates/unitmanagement/change_equipment.html
@@ -1,4 +1,4 @@
-{% extends "profiles/sidebar_um.html" %}  
+{% extends "profiles/sidebar_inventory.html" %}
 
 {% block content %}
 <div class="ui fluid container">
